--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "er",
+
+  "name": "er-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "build": "webpack",
     "postbuild": "copy /y .\\dist\\er-js.bundle.js .\\demo\\js\\",
